eggenberg-reverse-proxy-cluster/argocd-apps-configuration/pmhme/overlays/test/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
spec:
  rules:
    - host: test.hauptmann.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-service
                port:
                  name: http
