eggenberg-reverse-proxy-cluster/argocd-apps-configuration/pmhme/overlays/test/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
namespace: portfolio-test
resources:
- ../../base
images:
- name: dockerha08/pmhme
  newTag: "20260327183758"
patches:
- path: ingress-patch.yaml
